--- a/.github/workflows/challenge-test.js.yml
+++ b/.github/workflows/challenge-test.js.yml
@@ -6,13 +6,14 @@ name: Node.js CI
 # trigger
 on:
   push:
-    branches: [ "*" ]
+    branches:
+      - 'students/**'
 
 # what we want to happen
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
