--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,26 +4,26 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ "students/**" ]
+    push:
+        branches-ignore:
+            - master
 
 jobs:
-  build:
+    run-tests:
+        strategy:
+            matrix:
+                node-version: [14.x, 16.x]
+                # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+                os: [ubuntu-latest, windows-latest]
 
-    runs-on: ubuntu-latest
+        runs-on: ${{matrix.os}}
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+        steps:
+            - uses: actions/checkout@v3
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v3
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: "npm"
+            - run: npm ci
+            - run: npm test
