--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,4 @@ jobs:
             - run: npm ci
             - run: npm test
             - run: npm test js6
-              # if: always()
+              if: always()
