--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,25 +27,32 @@ jobs:
                   cache: "npm"
             - run: npm ci
             - name: run test js1
-              run: npm test js1
-              if: always()
-            - run: npm test js2
-              if: always()
-            - run: npm test js3
-              if: always()
-            - run: npm test js4
-              if: always()
-            - run: npm test js5
-              if: always()
-            - run: npm test js6
-              if: always()
-            - run: npm test js7
-              if: always()
-            - run: npm test js8
-              if: always()
-            - run: npm test js9
-              if: always()
-            - run: npm test js10
-              if: always()
-            - run: npm test js11
-              if: always()
+              run: npm test
+            #   if: always()
+            # - run: npm test js2
+            #   if: always()
+            # - run: npm test js3
+            #   if: always()
+            # - run: npm test js4
+            #   if: always()
+            # - run: npm test js5
+            #   if: always()
+            # - run: npm test js6
+            #   if: always()
+            # - run: npm test js7
+            #   if: always()
+            # - run: npm test js8
+            #   if: always()
+            # - run: npm test js9
+            #   if: always()
+            # - run: npm test js10
+            #   if: always()
+            # - run: npm test js11
+              # if: always()
+            - name: Test Report
+              uses: dorny/test-reporter@v1
+              if: always()    # run this step even if previous step failed
+              with:
+                name: JEST Tests            # Name of the check run which will be created
+                path: reports/jest-*.xml    # Path to test results
+                reporter: jest-junit        # Format of test results
