--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,4 +55,4 @@ jobs:
               with:
                 name: JEST Tests            # Name of the check run which will be created
                 path: reports/jest-*.xml    # Path to test results
-                # reporter: jest-junit        # Format of test results
+                reporter: jest-junit        # Format of test results
