--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,9 +50,12 @@ jobs:
             # - run: npm test js11
               # if: always()
             - name: Test Report
-              uses: actions/upload-artifact@v2
-              if: always()    # run this step even if previous step failed
+              uses: ./bin
               with:
-                name: JEST Tests            # Name of the check run which will be created
-                path: reports/jest-*.xml    # Path to test results
-                # reporter: jest-junit        # Format of test results
+                paths: test/results/*.xml
+                output: test/results/results.html
+            - name: Upload test summary
+              uses: actions/upload-artifact@v3
+              with:
+                name: test-summary
+                path: test/results/results.html
