--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
                   cache: "npm"
             - run: npm ci
             - name: run test js1
-              run: npm test js7
+              run: npm test
             #   if: always()
             # - run: npm test js2
             #   if: always()
@@ -50,12 +50,9 @@ jobs:
             # - run: npm test js11
               # if: always()
             - name: Test Report
-              uses: ./bin
+              uses: dorny/test-reporter@v1
+              if: always()    # run this step even if previous step failed
               with:
-                paths: test/results/*.xml
-                output: test/results/results.html
-            - name: Upload test summary
-              uses: actions/upload-artifact@v3
-              with:
-                name: test-summary
-                path: test/results/results.html
+                name: JEST Tests            # Name of the check run which will be created
+                path: reports/jest-*.xml    # Path to test results
+                reporter: jest-junit        # Format of test results
