--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
             - run: npm ci
             - name: run test
               run: npm test
-            #   if: always()
+              if: always()
             # - run: npm test js2
             #   if: always()
             # - run: npm test js3
