--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,7 +50,7 @@ jobs:
             # - run: npm test js11
               # if: always()
             - name: Test Report
-              uses: actions/upload-artifact@v3
+              uses: phoenix-actions/test-reporting@v8
               if: always()    # run this step even if previous step failed
               with:
                 name: JEST Tests            # Name of the check run which will be created
