--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,5 @@ jobs:
                     cache: "npm"
             - run: npm ci
             - name: Run tests
-                run: npm test
+                run: npm run test-github
                 if: always()
