--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "test-coverage": "jest ./src/js11-unit-testing/challenge.test.js --watch --coverage",
         "test": "jest",
         "test-watch": "jest --watch",
-        "test-output": "jest --json --outputFile=.github/result.json --testLocationInResults"
+        "test-github": "jest -c=git-jest.config.json"
     },
     "contributors": [
         {
