--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
                     cache: "npm"
             - run: npm ci
             - name: Run tests
-                run: npm run test-github
+                run: npm run github:test
