--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,4 @@ jobs:
             - run: npm ci
             - name: Run tests
               run: npm run github:test
+              if: always()
