Links reporter to Formspree

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "A repo of JavaScript challenges created for use during web development courses at nology",
     "main": "index.js",
     "devDependencies": {
-        "@types/jest": "^26.0.20",
         "@babel/core": "^7.12.10",
         "@babel/preset-env": "^7.12.11",
+        "@types/jest": "^26.0.20",
         "babel-jest": "^26.6.3",
         "jest": "^26.6.3"
     },
@@ -14,7 +14,7 @@
         "test-coverage": "jest ./src/js11-unit-testing/challenge.test.js --watch --coverage",
         "test": "jest",
         "test-watch": "jest --watch",
-        "github:test": "jest -c=./git-jest.config.json"
+        "github:test": "jest --no-colors -c=./git-jest.config.json"
     },
     "contributors": [
         {
@@ -30,5 +30,8 @@
             "email": "andy@nology.io"
         }
     ],
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.27.2"
+    }
 }
