--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,11 +8,14 @@ on:
         branches-ignore:
             - master
 
+env:
+    USER: ${{github.actor}}
+
 jobs:
     run-tests:
         strategy:
             matrix:
-                node-version: [14.x, 16.x]
+                node-version: [16.x]
                 # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
         runs-on: ubuntu-latest
@@ -22,8 +25,8 @@ jobs:
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
-                    node-version: ${{matrix.node-version}}
-                    cache: "npm"
+                  node-version: ${{matrix.node-version}}
+                  cache: "npm"
             - run: npm ci
             - name: Run tests
               run: npm run github:test
