Changed workflow to trigger on Pull Request instead, code for other options currently commented out. Edited variables to use camelCase.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,10 +4,14 @@
 name: Node.js CI
 
 on:
-    push:
-        branches-ignore:
-            - master
-            - main
+    pull_request:
+        types: [opened, reopened]
+    # push:
+    # branches:
+    # - 'student/**'
+    # branches-ignore:
+    # - master
+    # - main
 
 env:
     USER: ${{github.actor}}
