--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-.vscode
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 node_modules
 coverage
 .env
