updated package script because there was an error on a local machine where it wouldn't find the command if it had a ':' in it.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,5 @@ jobs:
                   cache: "npm"
             - run: npm ci
             - name: Run tests
-              run: npm run github:test
+              run: npm run github-test
               continue-on-error: true
